add mobile menu

--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -14,7 +14,38 @@
 /* Medium Devices, Desktops 992px */
 @media only screen and (max-width: 991px) {
 
+  
+  .left-group-menu{
+    position: relative;
+    margin-bottom: 15px;
+  }
 
+  .menu_categories__link{
+    font-size:16px;
+  }
+
+  .menu_categories:first-of-type .menu_categories__item .menu_categories__link{
+    text-align: center;
+  }
+
+  .subCategory{
+    position: relative;
+    height: 0;  //////////// это псевдо слайдер для мобильного
+    width: 100%!important;
+    border: none;
+    background-color: #fff;
+    right: 0;
+    left: 0;
+  }
+  .subCategory.active{
+    height:initial;
+    transition: all .3s;
+  }
+  .btn_menu{
+    border: 1px solid #000;
+    background-color: #fff;
+  }
+  
   .blok_main_1.category_menu{
     width: 100%;
   }
