--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -407,17 +407,13 @@ button {
 }
 
 .btn_menu {
-  position: relative;
+  position: absolute;
   display: inline-block;
-  float: right;
   width: 30px;
   height: 100%;
   min-height: 35px;
   background: none;
-
-  //transform: translateY(50%);
-
-  border: 1px solid #000; ///////////
+   ///////////
 }
 
 .menu_categories__item:hover {
