--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1140,14 +1140,12 @@ button {
   z-index: 10; }
 
 .btn_menu {
-  position: relative;
+  position: absolute;
   display: inline-block;
-  float: right;
   width: 30px;
   height: 100%;
   min-height: 35px;
-  background: none;
-  border: 1px solid #000; }
+  background: none; }
 
 .menu_categories__item:hover {
   background-image: none; }
@@ -4254,6 +4252,8 @@ label.css-label {
     height: initial;
     transition: all .3s; }
   .btn_menu {
+    position: relative;
+    float: right;
     border: 1px solid #000;
     background-color: #fff; }
   .blok_main_1.category_menu {
