--- a/app/sass/helpers/_media.scss
+++ b/app/sass/helpers/_media.scss
@@ -42,6 +42,8 @@
     transition: all .3s;
   }
   .btn_menu{
+    position: relative;
+    float: right;
     border: 1px solid #000;
     background-color: #fff;
   }
