--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1387,49 +1387,49 @@ button {
   cursor: pointer;
 }
 
-.popup_text {
-  color: #FF0;
-  font-weight: bold;
-  font-size: 12px;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  cursor: pointer;
+//.popup_text {
+//  color: #FF0;
+//  font-weight: bold;
+//  font-size: 12px;
+//  font-family: Verdana, Arial, Helvetica, sans-serif;
+//  text-decoration: none;
+//  cursor: pointer;
+//
+//}
+//
+//.popup_text:hover {
+//  color: #0F3;
+//  font-weight: bold;
+//  font-size: 12px;
+//  font-family: Verdana, Arial, Helvetica, sans-serif;
+//  text-decoration: none;
+//  cursor: pointer;
+//}
 
-}
+//.popup_textB {
+//  color: #FF0;
+//  font-weight: bold;
+//  font-size: 14px;
+//  text-decoration: none;
+//  cursor: pointer;
+//
+//}
+//
+//.popup_textB:hover {
+//  color: #0F3;
+//  font-weight: bold;
+//  font-size: 14px;
+//  text-decoration: none;
+//  cursor: pointer;
+//}
 
-.popup_text:hover {
-  color: #0F3;
-  font-weight: bold;
-  font-size: 12px;
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.popup_textB {
-  color: #FF0;
-  font-weight: bold;
-  font-size: 14px;
-  text-decoration: none;
-  cursor: pointer;
-
-}
-
-.popup_textB:hover {
-  color: #0F3;
-  font-weight: bold;
-  font-size: 14px;
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.popup_z1 {
-  font-size: 14px;
-  color: #000;
-  font-style: normal;
-  font-weight: bold;
-  text-decoration: none
-}
+//.popup_z1 {
+//  font-size: 14px;
+//  color: #000;
+//  font-style: normal;
+//  font-weight: bold;
+//  text-decoration: none
+//}
 
 .style16new {
   color: #FFFFFF;
@@ -3331,9 +3331,8 @@ label.css-label {
 }
 
 .blackWrapper {
-  display: none;
   position: fixed;
-  z-index: 8;
+  z-index: 20;
   width: 100%;
   height: 100%;
   background: #000;
@@ -3994,9 +3993,15 @@ label.css-label {
 
 }
 
+.shoppingBasket_product__image{
+  float: left;
+  max-width:100px;
+}
+
+
 .shoppingBasket_product__name {
   text-align: center !important;
-  margin: 0 0 25px;
+  margin-left: 10px;
   font-size: 16px;
   color: #000;
 }
@@ -4081,14 +4086,7 @@ label.css-label {
   }
 }
 
-.button_buyProduct {
-  float: right;
-  width: 200px;
-  margin-top: 20px;
-  background-color: #d7ebf9;
-  border: 1px solid #aed0ea;
-  color: #2779aa;
-}
+
 
 .button_continueBuying__link {
 
@@ -4242,20 +4240,23 @@ label.css-label {
 
 .popup_likeShopbag__close {
   position: absolute;
-  top: 10px;
+  top: 4px;
   right: 10px;
-
-  width: 12px;
-  height: 12px;
+  color: #2779aa;
+  width: 16px;
+  height: 16px;
+  padding: 2px;
+  box-sizing: border-box;
   background: none;
   font-size: 18px;
   font-weight: 400;
   z-index: 4;
-
   &:hover {
     color: #f00;
   }
 }
+
+
 
 .popup_likeShopbag__text_main {
   display: inline-block;
@@ -4265,19 +4266,29 @@ label.css-label {
   font-size: 24px;
 }
 
-.popup_likeShopbag__text {
-  margin: 5px;
-}
-
 .popup_likeShopbag__product {
 
+  position: relative;
+  width: 100%;
 }
 
 .button_buyProduct {
-  //background-color: $color_blue;
+  float: right;
+  width: 200px;
+  margin-top: 20px;
+  background-color: #d7ebf9;
+  border: 1px solid #aed0ea;
+  border-radius: 6px;
   min-height: 30px;
   &:hover {
-    background-color: #157dd0;
+    background-color: #E9F1F9;
+    border-color: #2694e8;
+  }
+  &:active{
+    border-color:#2694e8;
+    background-color: #3baae3 ;
+    font-weight: bold;
+    color: #fff;
   }
 }
 
@@ -4289,21 +4300,26 @@ label.css-label {
   justify-content: space-around;
 }
 
+
+
 .popup_likeShopbag__continueBuying,
 .popup_likeShopbag__goToShopbag {
   width: 45%;
 }
 
-.button_buyProduct__text {
-  color: #fff;
-}
-
-.popup_likeShopbag__goToShopbag_text {
-
-  transition: 0.2s all;
-  &:hover {
-    color: #fff;
+.popup_likeShopbag__text {
+  color: #2779aa;
+  font-weight: bold;
+  &:hover{
+    text-decoration: none;
+    color: #2779aa;
   }
+}
+.popup_likeShopbag__goToShopbag .popup_likeShopbag__text{
+  display: block;
+  width: 100%;
+  text-align: center;
+  line-height: 30px;
 }
 
 
