--- a/app/sass/components/_sprite.scss
+++ b/app/sass/components/_sprite.scss
@@ -10,16 +10,60 @@
 // At the bottom of this section, we provide information about the spritesheet itself
 // $spritesheet: width height image $spritesheet-sprites;
 $icon-arrows-name: 'icon-arrows';
-$icon-arrows-x: 37px;
-$icon-arrows-y: 0px;
-$icon-arrows-offset-x: -37px;
-$icon-arrows-offset-y: 0px;
+$icon-arrows-x: 65px;
+$icon-arrows-y: 37px;
+$icon-arrows-offset-x: -65px;
+$icon-arrows-offset-y: -37px;
 $icon-arrows-width: 18px;
 $icon-arrows-height: 9px;
-$icon-arrows-total-width: 55px;
-$icon-arrows-total-height: 32px;
+$icon-arrows-total-width: 102px;
+$icon-arrows-total-height: 69px;
 $icon-arrows-image: '../image/sprite.png';
-$icon-arrows: (37px, 0px, -37px, 0px, 18px, 9px, 55px, 32px, '../image/sprite.png', 'icon-arrows', );
+$icon-arrows: (65px, 37px, -65px, -37px, 18px, 9px, 102px, 69px, '../image/sprite.png', 'icon-arrows', );
+$icon-life-name: 'icon-life';
+$icon-life-x: 37px;
+$icon-life-y: 0px;
+$icon-life-offset-x: -37px;
+$icon-life-offset-y: 0px;
+$icon-life-width: 30px;
+$icon-life-height: 32px;
+$icon-life-total-width: 102px;
+$icon-life-total-height: 69px;
+$icon-life-image: '../image/sprite.png';
+$icon-life: (37px, 0px, -37px, 0px, 30px, 32px, 102px, 69px, '../image/sprite.png', 'icon-life', );
+$icon-lviv-name: 'icon-lviv';
+$icon-lviv-x: 35px;
+$icon-lviv-y: 37px;
+$icon-lviv-offset-x: -35px;
+$icon-lviv-offset-y: -37px;
+$icon-lviv-width: 25px;
+$icon-lviv-height: 32px;
+$icon-lviv-total-width: 102px;
+$icon-lviv-total-height: 69px;
+$icon-lviv-image: '../image/sprite.png';
+$icon-lviv: (35px, 37px, -35px, -37px, 25px, 32px, 102px, 69px, '../image/sprite.png', 'icon-lviv', );
+$icon-vodafon-name: 'icon-vodafon';
+$icon-vodafon-x: 72px;
+$icon-vodafon-y: 0px;
+$icon-vodafon-offset-x: -72px;
+$icon-vodafon-offset-y: 0px;
+$icon-vodafon-width: 30px;
+$icon-vodafon-height: 32px;
+$icon-vodafon-total-width: 102px;
+$icon-vodafon-total-height: 69px;
+$icon-vodafon-image: '../image/sprite.png';
+$icon-vodafon: (72px, 0px, -72px, 0px, 30px, 32px, 102px, 69px, '../image/sprite.png', 'icon-vodafon', );
+$icon-kievstar-name: 'icon_kievstar';
+$icon-kievstar-x: 0px;
+$icon-kievstar-y: 37px;
+$icon-kievstar-offset-x: 0px;
+$icon-kievstar-offset-y: -37px;
+$icon-kievstar-width: 30px;
+$icon-kievstar-height: 32px;
+$icon-kievstar-total-width: 102px;
+$icon-kievstar-total-height: 69px;
+$icon-kievstar-image: '../image/sprite.png';
+$icon-kievstar: (0px, 37px, 0px, -37px, 30px, 32px, 102px, 69px, '../image/sprite.png', 'icon_kievstar', );
 $up-arrow-name: 'up-arrow';
 $up-arrow-x: 0px;
 $up-arrow-y: 0px;
@@ -27,15 +71,15 @@ $up-arrow-offset-x: 0px;
 $up-arrow-offset-y: 0px;
 $up-arrow-width: 32px;
 $up-arrow-height: 32px;
-$up-arrow-total-width: 55px;
-$up-arrow-total-height: 32px;
+$up-arrow-total-width: 102px;
+$up-arrow-total-height: 69px;
 $up-arrow-image: '../image/sprite.png';
-$up-arrow: (0px, 0px, 0px, 0px, 32px, 32px, 55px, 32px, '../image/sprite.png', 'up-arrow', );
-$spritesheet-width: 55px;
-$spritesheet-height: 32px;
+$up-arrow: (0px, 0px, 0px, 0px, 32px, 32px, 102px, 69px, '../image/sprite.png', 'up-arrow', );
+$spritesheet-width: 102px;
+$spritesheet-height: 69px;
 $spritesheet-image: '../image/sprite.png';
-$spritesheet-sprites: ($icon-arrows, $up-arrow, );
-$spritesheet: (55px, 32px, '../image/sprite.png', $spritesheet-sprites, );
+$spritesheet-sprites: ($icon-arrows, $icon-life, $icon-lviv, $icon-vodafon, $icon-kievstar, $up-arrow, );
+$spritesheet: (102px, 69px, '../image/sprite.png', $spritesheet-sprites, );
 
 // The provided mixins are intended to be used with the array-like variables
 //
